# autoware_utils-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/: CODEOWNERS
autoware_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_utils_debug/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_utils_debug/include/autoware_utils_debug/: published_time_publisher.hpp  time_keeper.hpp
autoware_utils_debug/test/cases/: debug_traits.cpp
autoware_utils_diagnostics/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_utils_geometry/: CHANGELOG.rst  package.xml
autoware_utils_geometry/include/autoware_utils_geometry/: boost_geometry.hpp
autoware_utils_geometry/src/geometry/: boost_polygon_utils.cpp  geometry.cpp  pose_deviation.cpp
autoware_utils_geometry/src/msg/: operation.cpp
autoware_utils_geometry/test/cases/: geometry.cpp  path_with_lane_id_geometry.cpp
autoware_utils_logging/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_utils_math/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_utils_pcl/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_utils_rclcpp/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_utils_system/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_utils_system/test/cases/: lru_cache.cpp
autoware_utils_tf/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_utils_uuid/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_utils_visualization/: CHANGELOG.rst  CMakeLists.txt  package.xml
autoware_utils_visualization/include/autoware_utils_visualization/: marker_helper.hpp
autoware_utils_visualization/src/: marker_helper.cpp
debian/: changelog  control  copyright  gbp.conf  rules
include/autoware_utils_debug/: debug_traits.hpp
include/autoware_utils_geometry/: boost_polygon_utils.hpp  geometry.hpp
include/autoware_utils_uuid/: uuid_helper.hpp
rpm/: ros-humble-autoware-utils-debug.spec  ros-humble-autoware-utils-diagnostics.spec  ros-humble-autoware-utils-geometry.spec  ros-humble-autoware-utils-logging.spec  ros-humble-autoware-utils-math.spec  ros-humble-autoware-utils-pcl.spec  ros-humble-autoware-utils-rclcpp.spec  ros-humble-autoware-utils-system.spec  ros-humble-autoware-utils-tf.spec  ros-humble-autoware-utils-uuid.spec  ros-humble-autoware-utils-visualization.spec  ros-humble-autoware-utils.spec  ros-jazzy-autoware-utils-debug.spec  ros-jazzy-autoware-utils-diagnostics.spec  ros-jazzy-autoware-utils-geometry.spec  ros-jazzy-autoware-utils-logging.spec  ros-jazzy-autoware-utils-math.spec  ros-jazzy-autoware-utils-pcl.spec  ros-jazzy-autoware-utils-rclcpp.spec  ros-jazzy-autoware-utils-system.spec  ros-jazzy-autoware-utils-tf.spec  ros-jazzy-autoware-utils-uuid.spec  ros-jazzy-autoware-utils.spec  ros-rolling-autoware-utils-debug.spec  ros-rolling-autoware-utils-diagnostics.spec  ros-rolling-autoware-utils-geometry.spec  ros-rolling-autoware-utils-logging.spec  ros-rolling-autoware-utils-math.spec  ros-rolling-autoware-utils-pcl.spec  ros-rolling-autoware-utils-rclcpp.spec  ros-rolling-autoware-utils-system.spec  ros-rolling-autoware-utils-tf.spec  ros-rolling-autoware-utils-uuid.spec  ros-rolling-autoware-utils-visualization.spec  ros-rolling-autoware-utils.spec  template.spec
src/: time_keeper.cpp
src/geometry/: alt_geometry.cpp  boost_polygon_utils.cpp
test/cases/: boost_polygon_utils.cpp
