<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_utils</name>
  <version>1.4.2</version>
  <description>The autoware_utils package</description>
  <maintainer email="egon.kang@autocore.ai">Jian Kang</maintainer>
  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
  <maintainer email="esteve.fernandez@tier4.jp">Esteve Fernandez</maintainer>
  <maintainer email="yutaka.kondo@tier4.jp">Yutaka Kondo</maintainer>
  <maintainer email="isamu.takagi@tier4.jp">Takagi, Isamu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_internal_debug_msgs</depend>
  <depend>autoware_internal_msgs</depend>
  <depend>autoware_internal_planning_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_utils_debug</depend>
  <depend>autoware_utils_diagnostics</depend>
  <depend>autoware_utils_geometry</depend>
  <depend>autoware_utils_logging</depend>
  <depend>autoware_utils_math</depend>
  <depend>autoware_utils_pcl</depend>
  <depend>autoware_utils_rclcpp</depend>
  <depend>autoware_utils_system</depend>
  <depend>autoware_utils_tf</depend>
  <depend>autoware_utils_uuid</depend>
  <depend>autoware_utils_visualization</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
